--- a/blog_app/templates/base.html
+++ b/blog_app/templates/base.html
@@ -8,17 +8,18 @@
     {% if request.user.is_authenticated %}
         <nav>
             <ul>
-                <li>Nav Content</li>
-                <li><a href="{% url 'post_create_view' %}">Create</a></li>
+                <li><a href="{% url 'home_view' %}">All Posts</a></li>
+                <li><a href="{% url 'post_create_view' %}">Create a Post</a></li>
                 <li><a href="{% url 'logout_view' %}">Logout</a></li>
             </ul>
         </nav>
     {% else %}
         <nav>
             <ul>
-                <li>Nav Content</li>
-                <li><a href="{% url 'post_create_view' %}">Create</a></li>
+                <li><a href="{% url 'home_view' %}">All Posts</a></li>
+                <li><a href="{% url 'post_create_view' %}">Create a Post</a></li>
                 <li><a href="{% url 'login_view' %}">Login</a></li>
+                <li><a href="{% url 'signup_view' %}">Create an Account</a></li>
             </ul>
         </nav>
     {% endif %}
