--- a/blog_app/templates/blog_app/post_list.html
+++ b/blog_app/templates/blog_app/post_list.html
@@ -2,9 +2,10 @@
 
 {% block content %}
     {% for post in post_list %}
-        <h1>{{ post.title }}</h1>
-        <p>{{ post.body }}</p>
-        <p>--
+        <div class="post-container">
+        <h3 class="post-title">{{ post.title }}</h3>
+        <p class="post-body">{{ post.body }}</p>
+        <p class="post-author">--
             <a href="{% url 'author_post_view' post.author.user.pk %}">
                 {{ post.author.user.username }}
             </a>
@@ -15,7 +16,7 @@
             <span>{{ tag }} </span>
         {% endfor %}
         </div>
-        
+
         <div class="likes">
         {% if post.likes.all %}
             {% for user in post.likes.all %}
@@ -26,9 +27,10 @@
         </div>
 
         {% if post.author.user == request.user %}
-            <a href="{% url 'tag_create_view' post.pk %}">Add Tag</a>
+            <a id="add-tag" href="{% url 'tag_create_view' post.pk %}">Add Tag</a>
         {% elif post.author.user != request.user and request.user not in post.likes.all %}
-            <a href="{% url 'like_view' post.pk %}">Like!</a>
+            <a id="like-btn" href="{% url 'like_view' post.pk %}">Like!</a>
         {% endif %}
+        </div>
     {% endfor %}
 {% endblock %}
