--- a/blog_app/templates/blog_app/post_list.html
+++ b/blog_app/templates/blog_app/post_list.html
@@ -12,9 +12,11 @@
         </p>
         <div class="tags">
         <span>Tags: </span>
-        {% for tag in post.tags.all %}
-            <span>{{ tag }} </span>
-        {% endfor %}
+        {% if post.tags.all %}
+            {% for tag in post.tags.all %}
+                <span><a href="{% url 'post_tag_view' tag.name %}">{{ tag }}</a> </span>
+            {% endfor %}
+        {% endif %}
         </div>
 
         <div class="likes">
